# zero2pro

./: .gitignore  Cargo.toml  Dockerfile  config.toml  justfile
config/: base.yaml
migration/src/: lib.rs  m20240629_000001_create_subscriptions.rs
scripts/: init_db.ab
src/: configration.rs  configuration.rs  lib.rs  main.rs
src/entities/: mod.rs  prelude.rs  subscriptions.rs
src/routes/: subscribe.rs
tests/: health_work.rs
