[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.203", features = ["derive"] }
config = "0.14.0"
uuid = {version = "1.9.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2.3"
tracing-actix-web = "0.7.11"
tracing-rolling = "0.3.0"
time = "0.3.36"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12.5"
